Fixed editor alignment. Added slider animation.

--- a/src/app/pages/editor/editor.component.scss
+++ b/src/app/pages/editor/editor.component.scss
@@ -1,3 +1,7 @@
+.content-height {
+    height: calc(100vh - 64px);
+}
+
 .canvasContainer {
     border: 4px solid #414141;
     border-radius: 4px;
