--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,7 @@
 @import "./theme.scss";
 @import "./normalize.css";
 @import "./flexboxgrid.min.css";
+@import url('https://fonts.googleapis.com/css?family=Open+Sans|Roboto&display=swap');
 
 $light: #e2e2e2;
 $lighter: #f3f3f3;
@@ -20,10 +21,12 @@ body {
 }
 
 .main-container {
-    width: 100vw !important;
-    height: 100vh !important;
     display: flex;
     flex-direction: column;
+}
+
+.swiper-pagination-bullet {
+    background: lightblue !important;
 }
 
 //Components
@@ -32,8 +35,8 @@ input {
     background-color: #303030;
     border-radius: 8px;
     font-size: 16px;
-    font-family: "Roboto", serif;
-    color: #e2e2e2;
+    font-family: "Open Sans", sans-serif;
+    color: #e2e2e2 !important;
     padding: 8px;
     margin-bottom: 8px;
 }
@@ -43,7 +46,7 @@ textarea {
     background-color: #303030;
     border-radius: 8px;
     font-size: 16px;
-    font-family: "Roboto", serif;
+    font-family: "Open Sans", sans-serif;
     color: #e2e2e2;
     padding: 8px;
     margin-bottom: 8px;
@@ -58,7 +61,7 @@ select {
     background-color: #303030;
     border-radius: 8px;
     font-size: 16px;
-    font-family: "Roboto", serif;
+    font-family: "Open Sans", sans-serif;
     color: #e2e2e2;
     padding: 8px;
     margin-bottom: 8px;
@@ -108,7 +111,7 @@ select:hover {
     font-weight: lighter;
     letter-spacing: 2px;
     text-align: center;
-    font-family: "Roboto", serif;
+    font-family: "Open Sans", sans-serif;
 }
 
 .text-center {
@@ -159,12 +162,20 @@ select:hover {
     padding-right: 32px;
 }
 
+.padding {
+    padding: 16px;
+}
+
 .no-padding {
     padding: 0px !important;
 }
 
-.padding {
-    padding: 16px;
+.no-padding-left {
+    padding-left: 0px;
+}
+
+.no-padding-right {
+    padding-right: 0px;
 }
 
 .extra-padding {
